--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Do not add anything to the HTML until Part 3 of the project -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -13,12 +14,12 @@
     </div>
     <div class="menu">
       <ul>
-        <li>Menu Item 1</li>
-        <li>Menu Item 2</li>
-        <li>Menu Item 3</li>
-        <li>Menu Item 4</li>
-        <li>Menu Item 5</li>
-        <li>Menu Item 6</li>
+        <li>Students</li>
+        <li>Faculty</li>
+        <li>What's New</li>
+        <li>Tech Trends</li>
+        <li>Music</li>
+        <li>Log Out</li>
       </ul>
     </div>
     <div class="articles">
@@ -43,7 +44,7 @@
         naboo ackbar tatooine. Hutt lars padmé darth. Maul solo darth darth jabba qui-gon chewbacca darth maul. Moff baba wicket
         han. C-3po antilles moff qui-gon ahsoka aayla dooku amidala. Palpatine droid amidala droid k-3po twi'lek padmé wookiee. Leia
         moff calamari mon obi-wan. Solo grievous lando coruscant. Jinn darth palpatine obi-wan mon.</p>
-        <span class='expand'></span>
+        <span class='expandButton'></span>
       </div>
       <div class="article">
         <h2>Javascript and You, ES6</h2>
@@ -59,7 +60,7 @@
         wand, spectacles House Cup Bertie Bott’s Every Flavor Beans Impedimenta. Stunning spells tap-dancing spider Slytherin’s Heir
         mewing kittens Remus Lupin. Palominos scarlet train black robes, Metamorphimagus Niffler dead easy second bedroom. Padma
         and Parvati Sorting Hat Minister of Magic blue turban remember my last.</p>
-        <span class='expand'></span>
+        <span class='expandButton'></span>
       </div>
       <div class="article">
         <h2>React.js vs Angular vs Vue</h2>
@@ -85,7 +86,7 @@
         adipiscing elit. Nidorina Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nidoqueen Lorem ipsum dolor sit amet,
         consectetur adipiscing elit. Nidoran Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nidorino Lorem ipsum dolor
         sit amet, consectetur adipiscing elit. Nidoking Lorem ipsum</p>
-        <span class='expand'></span>
+        <span class='expandButton'></span>
       </div>
       <div class="article">
         <h2>Proffesional Software Development in 2018</h2>
@@ -108,7 +109,7 @@
           hodor hodor hodor? Hodor, hodor. Hodor. Hodor, hodor - HODOR hodor, hodor hodor hodor! Hodor, hodor. Hodor. Hodor, HODOR
           hodor, hodor hodor, hodor, hodor hodor. Hodor hodor - hodor - hodor... Hodor hodor hodor hodor hodor hodor hodor?! Hodor
           hodor - hodor hodor hodor. Hodor. Hodor hodor... Hodor hodor hodor hodor hodor? </p>
-        <span class='expand'></span>
+        <span class='expandButton'></span>
       </div>
     </div>
   </body>
