--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <span class='expandButton'></span>
       </div>
       <div class="article">
-        <h2>Proffesional Software Development in 2018</h2>
+        <h2>Professional Software Development in 2018</h2>
         <p class="date">Nov 7th, 2017</p>
         <p>Hodor hodor HODOR! Hodor hodor - hodor, hodor. Hodor hodor... Hodor hodor hodor; hodor hodor. Hodor hodor hodor, hodor, hodor
           hodor. Hodor, hodor. Hodor. Hodor, hodor - hodor... Hodor hodor hodor; hodor HODOR hodor, hodor hodor?! Hodor hodor, hodor.
