Finishes article mvp

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       crossorigin="anonymous">
     </script>
     <script src="./Menu/Menu.js" async></script>
+    <script src="./Article/Article.js" async></script>
   </head>
   <body>
     <div class="header">
